# LSTM-Stock-Prediction-Model

./: README.md  pyproject.toml  requirements-dev.txt
configs/: default.yaml
docs/: PRIVATE_IMPLEMENTATIONS.md  REDACTION_POLICY.md
sample_data/: prices_test.csv  prices_train.csv
scripts/: generate_data.py  naive_baseline.py  predict.py  train.py
src/: sample code.py
src/stock_lstm/: baselines.py  config.py  data.py  evaluate_regression.py  generate_data.py  logging_utils.py  metrics.py  model.py  predict.py  train.py  visualization.py
src/stocklstm/: cli.py  interfaces.py  loaders_csv.py  metrics.py  models.py  pipeline.py  preprocess.py  sample code.py
tests/: conftest.py  test_data.py  test_model.py  test_pipeline.py  test_smoke.py
