[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-lstm-model"
version = "0.1.0"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "torch"
]

[project.scripts]
stocklstm-train = "stock_lstm.train:main"
stocklstm-predict = "stock_lstm.predict:main"
