[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-lstm-model"
version = "0.1.0"
dependencies = [
  "numpy",
  "pandas",
  "scikit-learn",
  "matplotlib",
  "keras",
  "tensorflow",
  "joblib"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "mypy",
]

[project.scripts]
stocklstm-train = "stock_lstm.train:main"
stocklstm-predict = "stock_lstm.predict:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
check_untyped_defs = true
disallow_incomplete_defs = false
ignore_missing_imports = true
